--- a/css/responsive.css
+++ b/css/responsive.css
@@ -29,6 +29,12 @@
 }
 
 @media screen and (max-width: 991px) {
+    span.menu-close {
+        padding: 7px 10px;
+        background: #ffc05b;
+        color: #fff;
+        border-radius: 3px;
+    }
     .nav-menu {
         display: block;
         position: fixed;
@@ -168,6 +174,7 @@
     }
     .mob-img {
         display: block;
+        width: 100%;
     }
     
     .tech-txt img {
@@ -189,5 +196,51 @@
     
     p {
         font-size: 16px;
+    }
+
+    .qualcomm-sec .content-txt h2 {
+        text-align: left;
+        font-size: 32px;
+    }
+    
+    .qualcomm-sec .content-txt p {
+        text-align: left;
+    }
+    
+    .advanced-sensing-sec .content-txt h2 {
+        text-align: left;
+        font-size: 32px;
+    }
+    
+    .advanced-sensing-sec .content-txt p {
+        font-size: 16px;
+        text-align: left;
+    }
+    .control-sec .content-txt h2 {
+        font-size: 32px;
+    }
+    
+    .control-sec .content-txt p {
+        font-size: 16px;
+    }
+    
+    .everyone-sec .everyone-box .everyone-txt p {
+        height: auto;
+    }
+    
+    .everyone-sec .everyone-box {
+        margin-bottom: 30px;
+    }
+    .everyone-sec {
+        padding: 40px 0;
+    }
+    .smart-piano-sec {
+        padding: 40px 0;
+    }
+    
+    .smart-piano-sec h2 {
+        font-size: 32px;
+        text-align: left;
+        margin-bottom: 10px;
     }
 }
