--- a/css/responsive.css
+++ b/css/responsive.css
@@ -125,6 +125,13 @@
     .control-sec img.find-img {
         margin-top: 30px;
     }
+    .w-20 {
+        width: 33%;
+    }
+    
+    .footer-col {
+        margin-bottom: 15px;
+    }
 }
 
 @media screen and (max-width:575px) {
@@ -289,5 +296,8 @@
 
     .piano-slider .owl-carousel .owl-dots {
         margin-top: 10px;
+    }
+    .w-20 {
+        width: 100%;
     }
 }
