--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,11 @@ ul {
 
 .header {
     background: #000;
-    padding: 15px 0;
+    padding: 20px 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 9;
 }
 
 .nav-menu ul li a {
@@ -322,7 +326,7 @@ ul.menu-icon li .count {
     top: 0;
     left: 0;
     width: 2px;
-    height: 250px;
+    height: 185px;
     background: #B39957;
     content: "";
 }
@@ -397,15 +401,16 @@ ul.menu-icon li .count {
     background-size: cover;
     position: relative;
     padding: 40px 0;
-    height: 650px;
+    height: 670px;
     display: flex;
     flex-wrap: wrap;
     background-position: center center;
 }
 
 .tech-txt {
-    padding-top: 80px;
+    padding-top: 130px;
     position: relative;
+    padding-left: 30px;
 }
 
 .technology-sec .tech-txt h2 {
@@ -549,6 +554,9 @@ ul.menu-icon li .count {
     background: url(../img/experience-bg.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
+}
+.experience-sec .tech-txt {
+    padding-top: 50px;
 }
 
 .experience-sec .tech-txt h2 {
@@ -715,4 +723,63 @@ ul.menu-icon li .count {
 
 span.menu-close {
     display: none;
+}
+
+.footer {
+    background: #000;
+    padding: 60px 0 20px;
+}
+
+.footer-col h3 {
+    color: #fff;
+    font-family: 'SF UI Display Thin';
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+    color: white;
+    font-size: 16px;
+    font-family: 'BrownLight';
+    font-weight: 300;
+    word-wrap: break-word;
+    text-decoration: none;
+    padding: 10px 0;
+    display: block;
+    border-bottom: solid 1px #2b2d31;
+}
+.social-icons {
+    margin-top: 15px;
+}
+
+.social-icons a {
+    background: #2b2d31;
+    border-radius: 100%;
+    height: 40px;
+    width: 40px;
+    display: inline-block;
+    text-align: center;
+    line-height: 40px;
+    color: #8a8c92;
+}
+
+.footer-col ul li:last-child a {
+    border: none;
+}
+.w-20 {
+    width: 20%;
+}
+.copyright-txt {border-top: solid 1px;padding-top: 20px;margin-top: 50px;}
+
+.copyright-txt p {
+    color: #fff;
+    font-family: 'SF UI Display Thin';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 28px;
+    letter-spacing: 0.18px;
 }
