--- a/css/responsive.css
+++ b/css/responsive.css
@@ -157,15 +157,17 @@
     }
 
     .high-definition .content-txt::before {
-        height: 70px;
+        height: 100px;
+        left: 0px;
     }
 
     .high-definition .content-txt h2 {
-        font-size: 36px;
+        font-size: 45px;
+        padding-left: 10px;
     }
 
     .high-definition .content-txt {
-        padding-left: 15px;
+        padding-left: 0;
     }
     
     .piano-mob-img {
@@ -311,5 +313,10 @@
     }
     .footer-col img.qr-img {
         width: 100%;
+    }
+}
+@media screen and (max-width:400px) {
+    .high-definition .content-txt h2{
+        font-size: 40px;
     }
 }
