--- a/css/responsive.css
+++ b/css/responsive.css
@@ -316,6 +316,9 @@
     .footer-col img.qr-img {
         width: 100%;
     }
+    .technology-sec .tech-txt.tech-title h2 {
+        font-size: 24px;
+    }
 }
 @media screen and (max-width:400px) {
     .high-definition .content-txt h2{
