--- a/css/responsive.css
+++ b/css/responsive.css
@@ -157,12 +157,12 @@
     }
 
     .high-definition .content-txt::before {
-        height: 100px;
+        height: 80px;
         left: 0px;
     }
 
     .high-definition .content-txt h2 {
-        font-size: 45px;
+        font-size: 32px;
         padding-left: 10px;
     }
 
@@ -203,7 +203,7 @@
     }
 
     .technology-sec .tech-txt h2 {
-        font-size: 24px;
+        font-size: 29px;
         line-height: normal;
     }
 
@@ -233,7 +233,7 @@
     }
     
     .piano-sec .content-txt h2 {
-        font-size: 24px;
+        font-size: 30px;
         text-align: left;
     }
 
@@ -317,11 +317,14 @@
         width: 100%;
     }
     .technology-sec .tech-txt.tech-title h2 {
-        font-size: 24px;
+        font-size: 26px;
     }
 }
 @media screen and (max-width:400px) {
     .high-definition .content-txt h2{
-        font-size: 40px;
+        font-size: 24px;
+    }
+    .high-definition .content-txt::before{
+        height: 65px;
     }
 }
