--- a/css/style.css
+++ b/css/style.css
@@ -435,11 +435,11 @@ ul.menu-icon li .count {
     top: 0;
 }
 
-.technology-sec .tech-txt.tech-title h2::before {
+.technology-sec .tech-txt h2::before {
     content: none;
 }
 
-.technology-sec .tech-txt.tech-title h2 {
+.technology-sec .tech-txt h2 {
     padding-top: 0px;
 }
 .technology-sec .tech-txt h2 span {
